# wp-epub-rs-emini

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android-arm64-release.yml  build-android-release.yml  build-android.yml  build-api.yml  build-epub-uniffi-android.yml  build-epub-uniffi-jvm.yml  build-epub-uniffi-windows.yml  build-epub-uniffi.yml  build-jvm.yml  release-android.yml  release-jvm.yml
wp-android-emini/: README.md  settings.gradle.kts
wp-android-emini/app/: build.gradle.kts  proguard-rules.pro
wp-android-emini/app/src/main/: AndroidManifest.xml
wp-android-emini/app/src/main/res/drawable/: baseline_expand_circle_down_24.xml
wp-android-emini/app/src/main/res/layout/: activity_download.xml  activity_loading.xml  activity_main.xml  dialog_about.xml  dialog_acknowledgements.xml  nointernet_dialog.xml
wp-android-emini/app/src/main/res/menu/: main_menu.xml
wp-android-emini/app/src/main/res/raw/: ebook
wp-android-emini/app/src/main/res/values/: ic_launcher_background.xml  (+1 more)
wp-android-emini/gradle/: libs.versions.toml
wp-android-emini/gradle/wrapper/: gradle-wrapper.properties
wp-backend-rs-emini/: Cargo.toml
wp-backend-rs-emini/api/: Cargo.toml
wp-backend-rs-emini/api/src/: wattpad_api.rs
wp-backend-rs-emini/epub-uniffi/: Cargo.toml
wp-backend-rs-emini/epub-uniffi/src/: lib.rs  wp_epub_mini.udl
wp-backend-rs-emini/wattpad-rs/: Cargo.toml  README.md
wp-backend-rs-emini/wattpad-rs/src/: error.rs  lib.rs  structs.rs
wp-backend-rs-emini/wp-epub-mini/: Cargo.toml  README.md  build.rs
wp-jvm-emini/: README.md  settings.gradle.kts
wp-jvm-emini/app/: build.gradle.kts
wp-jvm-emini/exe4j/: config.exe4j
wp-jvm-emini/gradle/: libs.versions.toml
(+34 files in other folders)
