[package]
name = "wp-epub-mini"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
iepub = "1.0.0"
lol_html = "2.6.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1.47.0", features = ["full"] }
wattpad-rs = { path = "../wattpad-rs" }
anyhow = "1.0.98"
uniffi = { version = "0.29.4", features = ["cli", "tokio"] }
thiserror = "2.0.12"
once_cell = "1.21.3"
quick-xml = { version = "0.38.0", features = ["serialize"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[lib]
crate-type = ["cdylib"]
name = "uniffi_wp_epub_mini"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
